# rust-template

./: .env  Cargo.toml  Dockerfile  README.md  create_image.sh  justfile  rustfmt.toml  start_container.sh
.github/workflows/: ci.yml  docker-image.yml  rust.yml  valgrind.yml
src/: lib.rs  main.rs
tests/: tests.rs
tools/docker/: create_image.sh  start_container.sh
