# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rust-template"
version = "0.1.0"
authors = ["Michael G. Noll <miguno@miguno.com>"]
description = """
A multi-line
description of
this project
"""
categories = ["command-line-utilities"]
keywords = [
    "foo",
    "bar",
]
license = "MIT"
edition = "2024"
readme = "README.md"
documentation = "https://github.com/miguno/rust-template"
homepage = "https://github.com/miguno/rust-template"
repository = "https://github.com/miguno/rust-template"

[[bin]]
path = "src/main.rs"
name = "rust-template-app"

[dependencies]
base64 = "0.22.1"

# To allow the use of expect/panic/unwrap for a line of code, use an override
# similar to:
#
#   #[allow(clippy::unwrap_used, clippy::expect_used)]
#   panic!("example of a panic call that should be allowed")
#
[lints.clippy]
pedantic = "deny"
expect_used = "deny" # no `expect()`
panic = "deny"       # no `panic()`
unwrap_used = "deny" # no `unwrap()`
